testsuite/poke.pkl/add-integers-overflow-diag-3.pk
/* { dg-do compile } */

var res
  = 0b11 as int<3> + 1 as int<3>; /* { dg-error "overflow" } */
